fixes/alignments

--- a/css/footer.css
+++ b/css/footer.css
@@ -28,7 +28,7 @@
 .footer .nav-footer {
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 0rem;
 }
 
 .footer .nav-link {
@@ -39,4 +39,7 @@
 
 .footer .nav-link:hover {
     color: var(--geeks-primary);
+}
+.justify-content-md-end {
+    justify-content: flex-end !important;
 }
