--- a/css/nav.css
+++ b/css/nav.css
@@ -35,6 +35,10 @@
     visibility: visible;
     transform: translateY(5px); 
 }
+.dropdown-menu a:hover{
+    background-color: #e8dcff !important;  
+    color: #7d3cff !important;  
+}
 
 /* .dropdown-menu .dropdown-submenu .dropdown-menu {
     top: 5px; 
@@ -52,7 +56,7 @@
     top: 5px;
     left: 100%;
     margin-left: 0.2rem;
-    min-width: 220px;
+    min-width: 185px;
     display: none;
     position: absolute;
     opacity: 0;
@@ -69,6 +73,6 @@
     transform: translateX(0);
 }
 .dropdown-menu .dropdown-submenu .dropdown-menu a:hover {
-    background-color: #7d3cff !important;  
-    color: white !important;  
+    background-color: #e8dcff !important;  
+    color: #7d3cff !important;  
 }
